css/utilities.css
/* ?This is where reusable styling of this template will be. 
   !Will contain things like:
   * Button styling
   * Background color styling
   * padding and margin
*/

.container {
  max-width: var(--width-medium);
  margin: 0 auto;
  padding: 1rem 2rem;
}

h1::selection,
h2::selection {
  color: #111;
  background: var(--primary-color);
}

/* Buttons */
.btn {
  display: inline-block;
  padding: 0.75rem 1.9rem;
  border-radius: 30px;
  text-transform: uppercase;
  font-size: 0.82rem;
  transition: 0.3s;
}

.btn-primary {
  background: var(--primary-color);
  color: #000000;
}

.btn-secondary {
  margin: 5px 0;
  background-color: var(--bg-secondary);
  color: var(--bg-primary);
}

/* add hover to resume button */
.btn-primary:hover {
  background: var(--secondary-color);
}

/* Dark mode toggle */
#switch {
  display: none;
}

.toggle-icons {
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
}

.toggle-icons > img {
  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
  width: 30px;
}

.moon {
  transform: rotate(10deg);
}

#switch:checked + .toggle-icons .moon {
  transform: rotate(250deg);
}

#switch:checked + .toggle-icons .sun {
  transform: rotate(100deg);
}

/* Header Container */
.header-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 8rem;
  padding: 1rem;
}

.header-container > div {
  margin-top: 1rem;
}

.content-text {
  text-align: center;
  margin: 1.5rem 0;
}

.content-text h2 {
  font-size: 3rem;
  line-height: 1.2;
  transition: 0.2s ease-in-out;
}

.content-text p {
  padding: 0.5rem;
  margin: 0 auto;
  max-width: 700px;
}

/* Project cards */
.card {
  padding: 1rem;
  background: var(--card-background);
  color: #ffffff;
  border-radius: 5px;
  transition: 0.4s ease-in-out;
  cursor: pointer;
}

.card a {
  color: #ffffff;
  transition: 0.25s ease-in-out;
  font-size: 1.1rem;
  margin-right: 0.3rem;
}

.card a:hover {
  color: var(--primary-color);
}

.card:hover {
  box-shadow: inset 0 100px 1000px 10px rgba(0, 0, 0, 0.8);
}

.card:hover .project-info {
  opacity: 1;
}

/* Project Images */

/* project 1 */
.card:nth-child(1) {
  background: url(../assets/project/project-one.png) center center/cover;
}

/* Project 2 */
.card:nth-child(2) {
  background: url(../assets/project/project-two.png) center center/cover;
}

/* Project 3 */
.card:nth-child(3) {
  background: url(../assets/project/project-three.png) center center/cover;
}

/* Project 4 */
.card:nth-child(4) {
  background: url(../assets/project/project-four.png) center center/cover;
}

/* Project 5 */
.card:nth-child(5) {
  background: url(../assets/project/project-five.png) center center/cover;
}

/* Project 6 */
.card:nth-child(6) {
  background: url(../assets/project/project-six.png) center center/cover;
}

/* Media Queries */
@media (max-width: 768px) {
  .header-container {
    margin-top: 7rem;
    text-align: center;
  }

  .content-text h2 {
    font-size: 2.5rem;
  }
}

